# sigma-to-spl

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: update-coverage.yml  validate.yml
config/: corelight.yml  validator.yml
rules/cloud/: aws-ec2-snapshot-exfiltration.yml  aws-iam-privilege-escalation-policy-attachment.yml  azure-illicit-oauth-consent-grant.yml
rules/endpoint/: lsass-process-access-credential-dumping.yml
rules/identity/: entra-id-service-principal-credential-addition.yml  oauth-device-code-phishing-sigmahq.yml  oauth-device-code-phishing.yml
rules/network/: dns-tunneling-high-entropy-subdomains.yml  smb-lateral-movement-admin-shares.yml  statistical-beaconing-zeek-conn-log.yml  tls-c2-ja4-certificate-anomalies.yml
rules/windows/: kerberoasting-rc4-downgrade.yml  wmi-event-subscription-persistence.yml
sigma_to_spl/: __main__.py  config.py  converter.py  postprocess.py
tests/: test_converter.py
