[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sigma-to-spl"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pySigma>=0.10.0",
    "pySigma-backend-splunk>=1.0.0",
    "pySigma-pipeline-sysmon>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
sigma-to-spl = "sigma_to_spl.__main__:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["sigma_to_spl*"]
